test/TestPhases/typechecker/invalid/emptyStruct.blc
struct ASDF
    // empty!
end

@[EntryPoint]
activity running()
    await true
end